--- a/styles.css
+++ b/styles.css
@@ -81,3 +81,46 @@ input {
     margin-top: 15px;
     font-weight: bold;
 }
+
+.page-image {
+    width: 100%;
+    max-width: 400px;
+    display: block;
+    margin: 15px auto;
+    border-radius: 10px;
+}
+
+.bmi-page {
+    background-color: #ffe0b2;
+}
+
+.bmi-page h2 {
+    color: green;
+}
+
+.bmi-page .page-image {
+    width: 100%;
+    border-radius: 8px;
+    border: 2px solid beige;
+}
+
+.calorie-page {
+    background-color: lightskyblue;
+}
+
+.calorie-page h2 {
+    color: black;
+}
+
+.calorie-page .page-image {
+    width: 100%;
+    border-radius: 8px;
+    border: 2px white;
+}
+
+
+.bottom-right {
+    float: right;
+    width: 150px;
+    margin: 10px;
+}
